  as relative ones.

* [CONFIGURATION-254]
  After cloning a XMLConfiguration there was still a connection to the original
  configuration. So when the clone was modified and then saved the content of
  the original configuration was written. This has now been fixed.

* [CONFIGURATION-255]
  DatabaseConfiguration now handles list delimiters in property values
  correctly.

IMPROVEMENTS IN 1.4
===================
* [CONFIGURATION-155]
  SubsetConfiguration and CompositeConfiguration were updated to fully support
  an instance specific list delimiter. Concerning splitting of string
  properties that contain a list delimiter character, these classes now
  behave like a "normal" configuration.

* [CONFIGURATION-192]
  Variable interpolation features have been improved. A variable can now have
  the form ${prefix:variableName} where the prefix defines the type of the
  variable. The standard types sys for system properties and const for
  constants are supported. Variables without a prefix are treated as references
  to other configuration properties (which is compatible to earlier versions).

* [CONFIGURATION-197]
  A new configuration class for windows ini files was added.

* [CONFIGURATION-236]
  HierarchicalConfiguration and some of its sub classes now define a copy
  constructor.

* [CONFIGURATUON-237]
  With ManagedReloadingStrategy a new reloading strategy for file-based
  configurations was added that can be triggered through JMX.

* [CONFIGURATION-243]
  Configuration declarations in the configuration definition file for
  DefaultConfigurationBuilder that are marked as optional now support a new
  attribute config-forceCreate. If this attribute is set to true and the
  initialization of the configuration fails, DefaultConfigurationBuilder
  tries to add an empty configuration of the correct type to the resulting
  combined configuration. Before this change optional configurations that
  caused errors were never added to the combined configuration.
