@@ -18,12 +18,10 @@
 package org.apache.commons.configuration.web;
 
 import java.util.Iterator;
-import java.util.List;
 import javax.servlet.Servlet;
 import javax.servlet.ServletConfig;
 
 import org.apache.commons.collections.iterators.EnumerationIterator;
-import org.apache.commons.configuration.PropertyConverter;
 
 /**
  * A configuration wrapper around a {@link ServletConfig}. This configuration
@@ -62,14 +60,7 @@ public class ServletConfiguration extends BaseWebConfiguration
 
     public Object getProperty(String key)
     {
-        Object value = config.getInitParameter(key);
-        if (!isDelimiterParsingDisabled())
-        {
-            List list = PropertyConverter.split((String) value, getListDelimiter());
-            value = list.size() > 1 ? list : value;
-        }
-
-        return value;
+        return handleDelimiters(config.getInitParameter(key));
     }
 
     public Iterator getKeys()
