@@ -23,6 +23,11 @@
 
   <body>
     <release version="1.4-SNAPSHOT" date="in SVN">
+      <action dev="oheger" type="update" issue="CONFIGURATION-256">
+        MapConfiguration and the web-based configurations now treat strings
+        that contain an escaped list delimiter correctly: The escape character
+        will be removed, so that for instance "foo\,bar" becomes "foo,bar".
+      </action>
       <action dev="oheger" type="update" issue="CONFIGURATION-255">
         DatabaseConfiguration now handles list delimiters in property values
         correctly.
